--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,14 +123,16 @@ endif()
 
 # Set CXX flags based on compiler
 # Reference: https://stackoverflow.com/a/10055571/6667035
-# NOTE: "MATCHES Clang" handles both "Clang" and "AppleClang"
+# Modified: Use MATCHES "Clang" instead of STREQUAL "Clang" to correctly catch AppleClang on macOS
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   # using Clang or AppleClang
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -ffast-math") 
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -ffast-math") # Match standard with CMAKE_CXX_STANDARD
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   # using GCC
-  # Note: -fopenmp is added here manually for GCC, but we will handle it via find_package(OpenMP) later properly
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors -O3 -fdiagnostics-show-template-tree -fstats -finstrument-functions")
+  # Note: -std=c++2b is C++23. Already handled by CMAKE_CXX_STANDARD.
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors -fopenmp -O3 -fdiagnostics-show-template-tree -fstats -finstrument-functions")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+  # using Intel C++
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   # using Visual Studio C++
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:fast /Ox /Ob2 /Oi /Ot /GT /std:c++latest /experimental:module /Zm2000 /Zc:twoPhase- /D_HAS_STD_BYTE=0 /D_SILENCE_EXPERIMENTAL_FILESYSTEM_DEPRECATION_WARNING /D_HAS_STD_BOOLEAN=0 /bigobj /openmp:llvm")
@@ -144,9 +146,34 @@ endif()
 
 # OpenMP part
 # Reference: https://stackoverflow.com/a/12404666/6667035
+
+# === ADDED: Help CMake find OpenMP (libomp) on macOS (Homebrew) ===
+if(APPLE)
+    if(IS_DIRECTORY "/opt/homebrew/opt/libomp")
+        set(OpenMP_ROOT "/opt/homebrew/opt/libomp")
+    elseif(IS_DIRECTORY "/usr/local/opt/libomp")
+        set(OpenMP_ROOT "/usr/local/opt/libomp")
+    endif()
+endif()
+# === END ADDED ===
+
 find_package(OpenMP)
 if (OPENMP_FOUND)
     message(STATUS "Found OpenMP, applying flags.")
+    
+    # === ADDED: Fix for AppleClang unsupported option '-fopenmp' ===
+    if (CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
+        # AppleClang requires -Xpreprocessor before -fopenmp
+        # and explicit linking to libomp (usually handled by find_package in newer CMake, but explicitly fixed here just in case)
+        if (NOT "${OpenMP_CXX_FLAGS}" MATCHES "-Xpreprocessor")
+            message(STATUS "Patching OpenMP flags for AppleClang...")
+            set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp")
+            set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp")
+            set(OpenMP_EXE_LINKER_FLAGS "-lomp")
+        endif()
+    endif()
+    # === END ADDED ===
+
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
@@ -281,7 +308,7 @@ endif()
 
 # target_link_libraries
 # Reference: https://stackoverflow.com/a/39600062/6667035
-if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   # using Clang
   target_link_libraries(TinyDIP stdc++fs)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
