Change LLVM to GCC on macOS
Change LLVM to GCC on macOS

--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -39,7 +39,7 @@ jobs:
         release: edge
 
   verify-macos:
-    name: macOS (LLVM Clang)
+    name: macOS (GCC 14)
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
@@ -47,22 +47,18 @@ jobs:
     - name: Install Dependencies
       run: |
         brew update
-        brew install llvm cmake opencv tbb libomp
+        brew install gcc cmake opencv tbb libomp
 
     - name: Configure CMake (macOS)
       run: |
         mkdir build_mac
         cd build_mac
         
-        export LLVM_PATH=$(brew --prefix llvm)
-        
         cmake .. \
           -DCMAKE_CXX_STANDARD=23 \
           -DENABLE_CUDA=OFF \
-          -DCMAKE_C_COMPILER="$LLVM_PATH/bin/clang" \
-          -DCMAKE_CXX_COMPILER="$LLVM_PATH/bin/clang++" \
-          -DCMAKE_CXX_FLAGS="-nostdinc++ -isystem $LLVM_PATH/include/c++/v1 -fexperimental-library" \
-          -DCMAKE_EXE_LINKER_FLAGS="-L$LLVM_PATH/lib -Wl,-rpath,$LLVM_PATH/lib -fexperimental-library"
+          -DCMAKE_C_COMPILER="gcc-14" \
+          -DCMAKE_CXX_COMPILER="g++-14"
 
     - name: Build (macOS)
       run: |
