Update unit tests running list
Update unit tests running list

--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         cd build_test
         ./absTest
+        ./dct2Test
     
     - name: Clean up Build Artifacts
       run: rm -rf build_test
