--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -31,6 +31,14 @@ jobs:
         ./dct2Test
         ./dct2Test3
     
+    - name: Upload Executable
+      uses: actions/upload-artifact@v4
+      with:
+        name: TinyDIP-build-${{ runner.os }}
+        path: |
+          build_test/*
+        retention-days: 90
+
     - name: Clean up Build Artifacts
       run: rm -rf build_test
 
