--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -27,6 +27,8 @@ jobs:
     - name: Run Unit Tests (Linux)
       run: |
         cd build_test
+
+        echo "Running absTest..."
         ./absTest
         ./dct2Test
         ./dct2Test3
