--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -30,6 +30,8 @@ jobs:
 
         echo "Running absTest..."
         ./absTest
+
+        echo "Running dct2Test..."
         ./dct2Test
         ./dct2Test3
     
