--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -116,6 +116,8 @@ jobs:
     - name: Run Unit Tests (Linux GCC 15)
       run: |
         cd build_test_gcc
+
+        echo "Running absTest..."
         ./absTest
         ./dct2Test
 
