--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -119,6 +119,8 @@ jobs:
 
         echo "Running absTest..."
         ./absTest
+
+        echo "Running dct2Test..."
         ./dct2Test
 
     - name: Upload Executable (GCC 15)
