--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -164,6 +164,7 @@ jobs:
     - name: Run Unit Tests
       run: |
         cd build_test_gcc_local
+        echo "Running absTest..."
         ./absTest
         ./dct2Test
 
