--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -274,5 +274,6 @@ jobs:
 
     - name: Install Libraries via vcpkg
       run: |
-        vcpkg install opencv:x64-windows tbb:x64-windows openmp:x64-windows
+        vcpkg install opencv:x64-windows tbb:x64-windows
+
 
