--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -276,4 +276,11 @@ jobs:
       run: |
         vcpkg install opencv:x64-windows tbb:x64-windows
 
+    - name: Configure CMake
+      run: |
+        cmake -S . -B build_win `
+          -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake `
+          -DCMAKE_CXX_STANDARD=23 `
+          -DENABLE_CUDA=OFF
+
 
