--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -190,7 +190,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake libopencv-dev libtbb-dev libomp-dev linux-tools-generic
+        sudo apt-get install -y build-essential cmake libopencv-dev libtbb-dev libomp-dev linux-tools-common linux-tools-generic linux-tools-azure
 
     - name: Configure and Build Tests (Linux)
       run: |
