--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -190,7 +190,10 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential cmake libopencv-dev libtbb-dev libomp-dev linux-tools-common linux-tools-generic linux-tools-azure
+        sudo apt-get install -y build-essential cmake libopencv-dev libtbb-dev libomp-dev linux-tools-common linux-tools-generic
+        sudo apt-get install -y "linux-tools-$(uname -r)" "linux-cloud-tools-$(uname -r)"
+        # Verify perf is available
+        which perf || (echo "WARNING: perf not found, profiling will be skipped" && exit 0)
 
     - name: Configure and Build Tests (Linux)
       run: |
