--- a/.github/workflows/snap.yml
+++ b/.github/workflows/snap.yml
@@ -204,10 +204,25 @@ jobs:
     - name: Run Performance Profiling (perf)
       run: |
         cd build_test
-        PERF_BIN=$(find /usr/lib/linux-tools -name perf -type f -executable | head -n 1)
+        if [ ! -d "/usr/lib/linux-tools" ]; then
+            echo "Directory /usr/lib/linux-tools does not exist. Listing /usr/lib:"
+            ls -d /usr/lib/linux* || true
+        else
+            echo "Listing /usr/lib/linux-tools contents for debugging:"
+            ls -R /usr/lib/linux-tools
+        fi
+        
+        PERF_BIN=$(find /usr/lib/linux-tools -name perf -type f 2>/dev/null | head -n 1)
         
         if [ -z "$PERF_BIN" ]; then
-          echo "Error: Could not find any perf binary in /usr/lib/linux-tools"
+             echo "Standard path failed. Searching /usr/bin for versioned perf..."
+             PERF_BIN=$(find /usr/bin -name "perf_*" -type f -executable 2>/dev/null | grep -v "perf-archive" | head -n 1)
+        fi
+        
+        if [ -z "$PERF_BIN" ]; then
+          echo "Error: Could not find any perf binary in /usr/lib/linux-tools or /usr/bin."
+          echo "Checking installed packages:"
+          dpkg -l | grep linux-tools
           exit 1
         fi
         
