--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -18,6 +18,7 @@ parts:
     cmake-parameters:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCMAKE_CXX_FLAGS="-O3 -ffast-math -flto"
+      - -DCMAKE_C_FLAGS="-O3 -ffast-math -flto"
       # CUDA is disabled for the base snap build to ensure compatibility.
       # Enabling CUDA in snaps requires the 'nvidia-neon' extension or manual setup.
       - -DENABLE_CUDA=OFF
