--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -19,6 +19,7 @@ parts:
       - -DCMAKE_BUILD_TYPE=Release
       - -DCMAKE_CXX_FLAGS="-O3 -ffast-math -flto"
       - -DCMAKE_C_FLAGS="-O3 -ffast-math -flto"
+      - -DCMAKE_EXE_LINKER_FLAGS="-flto -O3"
       # CUDA is disabled for the base snap build to ensure compatibility.
       # Enabling CUDA in snaps requires the 'nvidia-neon' extension or manual setup.
       - -DENABLE_CUDA=OFF
